# imagine

./: .gitattributes  .gitignore  BUILDING  CMakeLists.txt  LICENSE  README.md  TARGET  WS
apps/: hello_imagine.cpp
cli/: main.cpp
examples/hello_imagine/: main.cpp
igc/: main.cpp
imagine/: ig.h  platform.h
imagine/core/: benchmark.h  call.h  endian.h  flags.h  log.cpp  log.h  threadpool.cpp  threadpool.h  time.h  unit.h  utils.h
imagine/envi/: cursor.cpp  dispatch.cpp  dispatch.h  dynlib.cpp  events.h  icon.cpp  icon.h  input_mouse.h  keyboard.h  lib.cpp  lib.h  window.cpp  window.h
imagine/envi/_vk/: memory.cpp
imagine/envi/arch/: cursor_impl.h  cursor_win32.cpp  dispatch_impl.h  dispatch_win32.cpp  dispatcher_impl.h  dynlib_impl.h  dynlib_win32.cpp  keyboard_impl.h  keyboard_win32.cpp  mouse_impl.h  window_impl.h  window_win32.cpp
imagine/envi/impl_arch/: cursor_impl.h  cursor_win32.cpp  dispatch_impl.h  dispatch_win32.cpp  icon_impl.h  icon_win32.cpp  keyboard_impl.h  keyboard_win32.cpp  lib_impl.h  lib_win32.cpp  mouse_impl.h  mouse_win32.cpp  window_impl.h  window_win32.cpp
imagine/envi/impl_vk/: buffer.cpp  buffer.h  image.cpp  image.h  memory.cpp  memory.h  resource.cpp  resource.h  sampler.cpp  sampler.h  surface.cpp  surface.h
imagine/math/: basis.h  discrete.h  expr.h  unit.h
imagine/math/calculus/: integrate.h
imagine/math/geom/: aabb.cpp  aabb.h  frustum.cpp  mesh.h  proj.cpp  (+4 more)
model/: main.cpp
src/: imagine.h
src/c/: c_api.h
src/imagine/: compiler.h  ig.h  platform.h  plt.h  processor.h  sup.h  support.h
test/: scenario.h
(+666 files in other folders)
